src/components/add-notecard/index.css
.add-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  width: 80vw;
  background-color: var(--dark-blue);
  padding: 10px;
  border-radius: 12px;
  border: 4px solid var(--purple);
}

.add-form input {
  height: 32px;
  width: 70%;
  overflow: wrap;
  border-radius: 8px;

  font-weight: bold;
}

.add-form input::placeholder {
  font-weight: lighter;
}

.add-form input:focus {
  outline: none;
  border: 4px solid var(--pink);
}

.add-form button {
  background-color: var(--purple);
  height: 34px;
  border-radius: 4px;
  font-weight: bold;
}

